tests/NormalTests/paczka1/small_fuzzy/36128882.err
Error in line 2: YyerTHm4 A996 14,1
Error in line 7: YyerTHm4 S275 26,5
Error in line 9: ntE6tTeWF S275 74,5
